--- a/server.conf
+++ b/server.conf
@@ -8,10 +8,12 @@ server_name = images
 port = 1312
 ip = 127.0.0.2
 root_dir = votai/test.
+default_file = test.txt
 
 [[vhosts]]
 server_name = test.com
 root_dir = .
 port = 42069
 ip = 127.5.5.5
+default_file = test.txt
 
