--- a/reload.conf
+++ b/reload.conf
@@ -1,7 +1,7 @@
 [global]
 log = true
 log_file = reload.log
-pid_file = /tmp/HTTPd-reloaded.pid
+pid_file = /tmp/HTTPd.pid
 
 [[vhosts]]
 server_name = videos
