feat: case insentive header

--- a/tests/meta/server.conf
+++ b/tests/meta/server.conf
@@ -12,7 +12,7 @@ default_file = test.txt
 
 [[vhosts]]
 server_name = test.com
-root_dir = .
+root_dir = ./
 port = 42069
 ip = 127.5.5.5
 default_file = test.txt
